--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
