--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
