--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.12.3",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
+    "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "react-router-dom": "^7.1.3",
     "swiper": "^11.2.1"
   },
