--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.3",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
