--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
