--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.12.3",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
