--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-awesome-reveal": "^4.3.1",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
